# gemseo-web-study

./: .copier-answers.yml  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  tox.ini
pages/: 1_Define_the_disciplines.py  2_Generate_the_N2_diagram.py  3_Generate_the_XDSM_diagram.py  __init__.py
requirements/: doc.txt  test-python3.10.txt  test-python3.11.txt  test-python3.12.txt  test-python3.13.txt  test-python3.9.txt
