[project]
name = "gemseo-web-study"
authors = [
    {name = "Francois Gallard", email = "contact@gemseo.org"}
]
description = "A web interface for GEMSEO to prototype MDO studues"
readme = "README.md"
license = "LGPL-3.0"
license-files = ["LICENSE.txt"]
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dynamic = ["version"]
requires-python = ">=3.10, <3.14"
dependencies = [
    "gemseo >=6,<7",
    "streamlit",
    "streamlit-tags"
]

[dependency-groups]
dev = [
    "covdefaults >=2",
    "pytest >=7,<9",
    "pytest-cov >=5",
    "pytest-xdist >=3",
]
doc = [
    "black",
    "griffe-fieldz",
    "griffe-inherited-docstrings",
    "markdown-exec[ansi]",
    "mike",
    "mkdocs-bibtex",
    "mkdocs-gallery",
    "mkdocs-gen-files",
    "mkdocs-include-markdown-plugin",
    "mkdocs-literate-nav",
    "mkdocs-material",
    "mkdocs-section-index",
    "mkdocstrings[python]",
]

[project.urls]
Homepage = "https://gemseo.org"
Source = "https://gitlab.com/gemseo/dev/gemseo-web-study"
Issues = "https://gitlab.com/gemseo/dev/gemseo-web-study/-/issues"

[project.entry-points]
gemseo_plugins = { gemseo-web-study = "gemseo_web_study" }

[build-system]
requires = [
    "setuptools",
    "setuptools_scm[toml]",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
